Fix background on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@ body {
   background-attachment: fixed;
   display: flex;
   justify-content: center;
+  height: 100lvh;
 }
 
 p {
